[fix]#14286 align sticky-row items

--- a/css/modules/_buttons-set.scss
+++ b/css/modules/_buttons-set.scss
@@ -20,16 +20,13 @@
         &:first-child{
             padding-left: 15px;
         }
-        &:last-child{
-            padding-right: 15px;
-        }
     }
     .tip{
         background-color: #eee;
         color: #666;
         float: left;
         height: 38px;
-        line-height: 34px;
+        line-height: 38px;
         i{
             font-size: 20px;
         }
