--- a/css/modules/_sticky-row.scss
+++ b/css/modules/_sticky-row.scss
@@ -15,7 +15,7 @@ sticky-row{
         position: fixed;
         background: #fff;
         box-shadow: 2px 2px 8px rgba(0,0,0,0.3);
-        padding: 15px;
+        padding: 25px 15px;
         left: 0;
         width: 100%;
     }
